--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "cra_redux",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rvarela11.github.io/cra_2-redux",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
