--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.1",
     "ethers": "^5.5.3",
+    "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
